2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs_files: Add CLUTTER_TYPE_SCORE

	* xs/ClutterScore.xs: Add bindings for ClutterScore.

2007-12-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* *: Sync up with upstream C API changes. As much as I hate
	doing huge commits, this is the only way to keep the bindings
	in a sane state.

	Missing bits:
	  - ClutterTimeoutPool: still need to think of a nice way to
	    wrap it up in Perl
	  - ClutterScore
	  - ClutterScript
	  - ClutterShader: this will have to wait until the dust
	    settles upstream

2007-08-17  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Bump to 0.500.

	* xs/Clutter.xs: Support the new thread-safety API, and put it
	under the Clutter::Threads namespace.

	* xs/ClutterEffect.xs: Bind clutter_effect_depth().

2007-08-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterEffect.xs: Call the Perl callback only if there
	is one; add Clutter::Effect->rotate_[xyz]() package methods.

2007-08-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterEffect.xs: Fix title for the description section.

2007-08-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterLayoyt.xs: Allow pure Perl implementations of the
	ClutterLayoyt::tune-request() virtual function. Document
	the arguments and return values of the Clutter::Layout methods.

2007-08-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterUnits.xs: Explain what Clutter::Units are and
	when you need to use them.

2007-08-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* xs/ClutterActor.xs: Rework QUERY_COORDS() so that it can be
	used as a fallback when subclassing, like:

	  return $self->SUPER::QUERY_COORDS()
	
	just like Clutter::Box::PACK_CHILD().
	
	* t/ClutterActor.t: Add Clutter::Actor subclassing tests.

2007-08-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm: Post-release bump to 0.403

2007-08-09  Emmanuele Bassi  <ebassi@openedhand.com>

	* Clutter.pm:
	* README: